<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="5dip"
            android:paddingLeft="15dip"
            android:paddingRight="8dip"
            android:background="@drawable/btn_back_style"
            android:text="@string/back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/help_title"
            android:textColor="@color/white"
            />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="         " />

    </LinearLayout>
    
    <ScrollView 
         android:layout_width="fill_parent"  
     android:layout_height="wrap_content">
    
        <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/help_1"
        android:textStyle="bold"
		android:textSize="16dip"        
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:textColor="@color/black"
        android:text="@string/help_1_detail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/help_2"
        android:textStyle="bold"
		android:textSize="16dip"        
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:textColor="@color/black"
        android:text="@string/help_2_detail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/help_3"
        android:textStyle="bold"
		android:textSize="16dip"        
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:textColor="@color/black"
        android:text="@string/help_3_detail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/help_4"
        android:textStyle="bold"
		android:textSize="16dip"        
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:textColor="@color/black"
        android:text="@string/help_4_detail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/help_5"
        android:textStyle="bold"
		android:textSize="16dip"        
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:textColor="@color/black"
        android:text="@string/help_5_detail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/help_6"
        android:textStyle="bold"
		android:textSize="16dip"        
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:textColor="@color/black"
        android:text="@string/help_6_detail" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/help_7"
        android:textStyle="bold"
		android:textSize="16dip"        
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:textColor="@color/black"
        android:text="@string/help_7_detail" />
    
    </LinearLayout>
    
    </ScrollView>
    
    </LinearLayout>