<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dip"
    android:paddingLeft="12dip"
    android:paddingRight="12dip"
    android:paddingTop="4dip" >
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/latitude"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/lat_value"
                android:padding="3dip"
                android:text="30.0" />
            <TextView
                android:padding="3dip"
                android:text="@string/longitude"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/lon_value"
                android:padding="3dip"
                android:text="120.0" />
        </TableRow>

        
        <TableRow>
            <TextView
                android:padding="3dip"
                android:text="@string/high"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/high_value"
                android:padding="3dip"
                android:text="0" />
            <TextView
                android:padding="3dip"
                android:text="@string/direct"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/direct_value"
                android:padding="3dip"
                android:text="0" />
             
        </TableRow>
        
        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/speed"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/speed_value"
                android:padding="3dip"
                android:text="0" />
            <TextView
                android:padding="3dip"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/time_value"
                android:padding="3dip"
                android:text="0" />
            
        </TableRow>
        
        
    </TableLayout>
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TableRow 
            android:id="@+id/descript_row" >
            <TextView
                android:padding="3dip"
                android:text="@string/descript"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descript_value"
                android:padding="3dip"
                android:text="0" />
        </TableRow>
    </TableLayout>
    
</LinearLayout>