<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/login_bg"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/topbar"
            android:orientation="horizontal">

        <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dip"
                android:background="@drawable/btn_back_style"
                android:gravity="center"
                android:paddingLeft="15dip"
                android:paddingRight="8dip"
                android:text="@string/exit"
                android:textColor="@color/white"/>

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/status_fraq_title"
                android:textColor="@color/white"/>

        <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dip"
                android:background="@drawable/btn_edit_style"
                android:gravity="center"
                android:paddingLeft="8dip"
                android:paddingRight="8dip"
                android:text="@string/edit"
                android:textColor="@color/white"/>
    </LinearLayout>


    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:stretchColumns="3"><!--第一列的索引号为0-->

        <!--XY坐标-->
        <TableRow>
            <TextView
                    android:padding="3dip"
                    android:text="@string/latitude"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/lat_value"
                    android:width="130dp"
                    android:padding="3dip"
                    android:text="0"/>

            <TextView
                    android:padding="3dip"
                    android:text="@string/longitude"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/lon_value"
                    android:layout_width="wrap_content"
                    android:padding="3dip"
                    android:text="0"/>
        </TableRow>


        <!--海拔-->
        <TableRow>
            <TextView
                    android:padding="3dip"
                    android:text="@string/high"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            <TextView
                    android:id="@+id/high_value"
                    android:padding="3dip"
                    android:layout_marginBottom="10dp"
                    android:layout_span="3"
                    android:text="0"/>
        </TableRow>


        <!--方向和速度-->
        <TableRow>
            <TextView
                    android:padding="3dip"
                    android:text="@string/direct"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/direct_value"
                    android:padding="3dip"
                    android:text="0"/>

            <TextView
                    android:padding="3dip"
                    android:text="@string/speed"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/speed_value"
                    android:padding="3dip"
                    android:text="0"/>
        </TableRow>


        <TableRow>
            <TextView
                    android:padding="3dip"
                    android:text="@string/gps_time"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/gps_time_value"
                    android:padding="3dip"
                    android:text="0"/>

            <TextView
                    android:padding="3dip"
                    android:text="@string/gps_type"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/gps_type_value"
                    android:padding="3dip"
                    android:text="0"/>
        </TableRow>

        <!--数据库存储情况-->
        <TableRow>
            <TextView
                    android:padding="3dip"
                    android:text="@string/db_status"
                    android:textColor="@color/black"
                    android:textStyle="bold"
            />
            <TextView
                    android:id="@+id/db_status"
                    android:layout_span="3"
                    android:textColor="@color/gray"
                    android:padding="3dip"
                    android:text="Waitting DB ..."/>
        </TableRow>


    </TableLayout>


    <TextView
            android:id="@+id/any_old_widget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"/>


</LinearLayout>