<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="5dip"
            android:paddingLeft="15dip"
            android:paddingRight="8dip"
            android:background="@drawable/btn_back_style"
            android:text="@string/back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/userfeedback"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:background="@drawable/btn_edit_style"
            android:text="@string/send"
            android:textColor="@color/white"/>
    </LinearLayout>
    
    <EditText 
        android:id="@+id/author"
        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_margin="5dip"
            android:hint="@string/user_mail_addres"
        />
    <EditText 
         android:id="@+id/content"
        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_margin="5dip"
            android:lines="6"
            android:hint="@string/user_feedback_content"
        />
</LinearLayout>