<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="5dip"
            android:paddingLeft="15dip"
            android:paddingRight="8dip"
            android:background="@drawable/btn_back_style"
            android:text="@string/back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/title"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:background="@drawable/btn_edit_style"
            android:text="@string/export"
            android:textColor="@color/white"/>
    </LinearLayout>
    
    <ListView 
        android:id="@+id/data_list_items"
        android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"           
	    android:divider="@drawable/divider"                             
	    android:dividerHeight="1dip"
	    android:layout_weight="1.0"
	    android:cacheColorHint="#00000000"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:background="@drawable/topbar"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/pageInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="page/pages"
            android:textColor="@color/white"
            />
        <Button
            android:id="@+id/swith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:background="@drawable/btn_edit_style"
            android:text="@string/swith"
            android:textColor="@color/white"/>
        
        <Button
            android:id="@+id/previousPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:background="@drawable/btn_edit_style"
            android:text="@string/previousPage"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/nextPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="5dip"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:background="@drawable/btn_edit_style"
            android:text="@string/nextPage"
            android:textColor="@color/white"/>
        </LinearLayout>
</LinearLayout>